# stardos_datalink

./: .gitignore  CMakeLists.txt  README.md  copilot_in.json  datalink.node.json  gcs.sh  ground_in.json  mavlinkformat.py  package.xml  systems.json
files/: copilot_in.json  ground_in.json  mountpoints.json  sensors.json  systems.json
include/stardos_datalink/: datalink.hpp  datalink_constants.hpp  datalink_util.hpp  floattelem.hpp  link_node.hpp  splitter.hpp
include/stardos_datalink/nodes/: autopilot_bridge.hpp  basic_datalink_node.hpp  datalink_server.hpp  floattelem_bridge.hpp  floattelem_sender.hpp  link_node.hpp  mavlink_camera_capture.hpp  mavlinked_node.hpp  mountpoint_reader_node.hpp  starcommand_serializer.hpp  system_reader_node.hpp
src/: .datalink.cpp.swp  abstract_datalink.hpp  client.cpp  compile_flags.txt  configured.cpp  copilot.cpp  datalink.cpp  datalink.hpp  datalink_util.cpp  floattelem.cpp  ground.cpp  main.cpp  server.cpp  udp_copilot_datalink.cpp  udp_groundcontrol_datalink.cpp
src/executables/: configured.cpp
src/nodes/: autopilot_bridge.cpp  basic_datalink_node.cpp  datalink_server.cpp  floattelem_bridge.cpp  floattelem_sender.cpp  link_node.cpp  mavlink_camera_capture.cpp  mavlinked_node.cpp  mountpoint_reader_node.cpp  starcommand_serializer.cpp  system_reader_node.cpp
